Converted many pages to use new ui-lib.pl functions, and broke down long forms using tabs.
When Webmin's detected OS is automatically updated, Usermin's will be too (if it is an equivalent version).
---- Changes since 1.340 ----
Added an option to the Proxy Servers form to fallback to a direct connection if the proxy is down.
Added a tab showing details of the current cert, with a link to download in PEM or PKCS12 format.
---- Changes since 1.350 ----
Added an option to the Authentication page to block users with too many failed logins, as well as hosts.
Created the new Blocked Hosts and Users page to show blocks currently in force, and allow them to be cleared.
Added an option to the Ports and Addresses page to control if Webmin attempts to to reverse-resolve the connected-to IP address when issuing redirects, such as from non-SSL to SSL mode.
---- Changes since 1.360 ----
Added a field to the Advanced Options page to control the number of days that files in /tmp/.webmin are kept before automatic deletion.
---- Changes since 1.370 ----
The format for dates displayed by Webmin can be changed by a new option on the User Interface page.
---- Changes since 1.380 ----
Inheritance of the system path into Webmin's search path can be set on the Operating System and Environment page.
The nice level (CPU priority) of all cron and other background jobs run by Webmin can now be set on the Advanced Options page.
---- Changes since 1.400 ----
Use the gzip -d command to extract Webmin modules, if gunzip is missing (such as on Windows).
Users with too many failed logins can be locked until the administrator unlocks them.
The default scheduled update time is now randomly selected.
---- Changes since 1.410 ----
Refresh the left-side frame when installing, removing or re-categorizing modules.
---- Changes since 1.420 ----
On Linux systems, the IO scheduling class and priority for Webmin Cron jobs can be set on the Advanced Options page.