@@ -79,3 +79,4 @@ The default scheduled update time is now randomly selected.
 Refresh the left-side frame when installing, removing or re-categorizing modules.
 ---- Changes since 1.420 ----
 On Linux systems, the IO scheduling class and priority for Webmin Cron jobs can be set on the Advanced Options page.
+Added a field to the SSL Encryption page for setting allowed ciphers.
